crates/compiler/src/tests/e2e/good/0078_paren_expr_call/main.gom
fn make_fn() -> () -> int32 {
    || 42
}

fn make_adder(n: int32) -> (int32) -> int32 {
    |x| x + n
}

fn main() {
    let a: int32 = (make_fn())();
    println(a);
    
    let b = (make_adder(5))(10);
    println(b);
}
