crates/compiler/src/tests/e2e/bad/0030_paren_expr_call/main.gom
fn make_fn() -> () -> int32 {
    || 42
}

fn main() {
    let result: int32 = (make_fn())();
    println(result);
}
